@@ -193,7 +193,7 @@ function DeleteTopicConfirm()
 When a topic is created, it is initialised in state \'open\'.\n
 Once a topic has been reviewed, and the code has been committed,\n
 the state should be updated to \'committed\'.  If the code\n
-in this review is not be committed, perhaps because a\n
+in this review is not to be committed, perhaps because a\n
 new review will superceed this one, or because it was rejected,\n
 the state should be changed to \'closed\'.\n
 \n
@@ -202,7 +202,10 @@ state is changed, an appropriate comment will be appended to\n
 all associated bugs, as a form of tracking.\n
 \n
 The topic states are also useful as a form of filtering, when\n
-retrieving lists of topics from the search page.
+retrieving lists of topics from the search page.\n
+\n
+This topic can be superceeded by a new topic, by selecting the\n
+state \'obsoleted\'.
 ')">(What's this?)</A></FONT>
   </td>
   <td>
